--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,7 +43,7 @@
                     <a href="#" class="btn btn-primary">Agende uma visita</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="./foto1.jpg" alt="">
+                    <img class="" src="./foto1.jpg" alt="">
                     <!--<img src= "https://picsum.photos/id/1005/800/600" alt="Área de lazer" class="img-fluid">-->
                 </div>
             </div>
@@ -114,6 +113,21 @@
                         <img src="./foto7.jpg" alt="Foto da área de lazer" class="img-fluid">
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="image-wrapper">
+                        <img src="./foto8.jpg" alt="Foto da área de lazer" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="image-wrapper">
+                        <img src="./foto 9.jpg" alt="Foto da área de lazer" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="image-wrapper">
+                        <img src="./foto 10.jpg" alt="Foto da área de lazer" class="img-fluid">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -123,12 +137,12 @@
         <div class="container">
           <h2 class="text-center mt-4 mb-4">Siga-nos nas redes sociais</h2>
           <div class="row justify-content-center align-items-center">
-            <div class="col-4 col-md-2 mb-4 text-center">
+            <div>
               <a target="_blank" href="https://www.facebook.com/pages/%C3%81rea-De-Lazer-Dreams/106561421342914">
                 <img src="https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png" alt="Facebook" class="img-fluid" style="max-height: 50px;">
               </a>
             </div>
-            <div class="col-4 col-md-2 mb-4 text-center">
+            <div>
               <a target="_blank" href="https://www.instagram.com/p/CS5ZDr8NTpp/?utm_source=ig_web_copy_link">
                 <img src="https://cdn4.iconfinder.com/data/icons/social-media-2210/24/Instagram-512.png" alt="Instagram" class="img-fluid" style="max-height: 50px;">
               </a>
