--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
         <div class="container">
           <h2 class="text-center mt-4 mb-4">Siga-nos nas redes sociais</h2>
           <div class="row justify-content-center align-items-center">
-            <div>
+            <div class= "col-4 col-md-2 mb-4 text-center">
               <a target="_blank" href="https://www.facebook.com/pages/%C3%81rea-De-Lazer-Dreams/106561421342914">
                 <img src="https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png" alt="Facebook" class="img-fluid" style="max-height: 50px;">
               </a>
             </div>
-            <div>
+            <div class= "col-4 col-md-2 mb-4 text-center">
               <a target="_blank" href="https://www.instagram.com/p/CS5ZDr8NTpp/?utm_source=ig_web_copy_link">
                 <img src="https://cdn4.iconfinder.com/data/icons/social-media-2210/24/Instagram-512.png" alt="Instagram" class="img-fluid" style="max-height: 50px;">
               </a>
